@startuml

title __SHARE's Class Diagram__\n

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          namespace group.share {
            class com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter {
                - mData : LinkedHashMap<String, String>
                - mInflater : LayoutInflater
                + FriendListAdapter()
                + addUser()
                + getItemCount()
                + getUserID()
                + getUserName()
                + onBindViewHolder()
                + onCreateViewHolder()
                ~ getUserID()
            }
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          namespace group.share {
            interface com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ItemClickListener {
                {abstract} + onItemClick()
            }
          }
        }
      }
    }
  }
  

  namespace com.pis.buy2gether {
    namespace usecases.home {
      namespace home {
        namespace product_view {
          namespace group.share {
            class com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ViewHolder {
                ~ inviteButton : MaterialButton
                ~ myTextView : TextView
                + onClick()
                ~ ViewHolder()
            }
          }
        }
      }
    }
  }
  

  com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter o-- com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ItemClickListener : mClickListener
  com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter +-down- com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ItemClickListener
  com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter +-down- com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ViewHolder
  com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ViewHolder .up.|> android.view.View.OnClickListener
  com.pis.buy2gether.usecases.home.home.product_view.group.share.FriendListAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
